fixed internal link

--- a/seo-services.html
+++ b/seo-services.html
@@ -344,7 +344,7 @@
                                 <h2 class="heading">Affordable Search Engine Optimization Services</h2>
                             </div>
                             <div class="herobanner__text">
-                                <p class="banner-width" style="max-width: 850px;"> Digital Minds On provides
+                                <p class="banner-width"> Digital Minds On provides
                                     full-service SEO services for organizations and companies to get them seen online,
                                     targeted visitors, and practical results. We specialize in using the latest trends
                                     in marketing and pairing them with the most effective techniques to drive results
@@ -529,7 +529,7 @@
                                                     business to market. We do thorough SEO keyword analysis to come up
                                                     with words that would be of interest to your audience and in line
                                                     with the search term. Using the metrics of search volume,
-                                                    competition, and relevance, you know that your content targets the
+                                                    competition, and relevance, you know that your <a href="content-creater" style="color: #fe0094; font-weight: bold;">content targets</a> the
                                                     keywords that are valuable for your business.</p>
                                             </div>
 
@@ -780,7 +780,7 @@
                         </div>
                         <div class="service__details__text" data-aos="fade-up" data-aos-duration="1500">
                             <p>SEO is not just a form of online advertising, it is your brand's secret to success. When
-                                you choose Digital Minds On, don’t expect to pay for an SEO consultant, rather, you gain
+                                you choose <a href="/" style="color: #fe0094; font-weight: bold;">Digital Minds On</a>, don’t expect to pay for an SEO consultant, rather, you gain
                                 a team of SEO experts who are dedicated to ensuring you build a long-lasting business.
                                 If you require a website SEO audit, a more complex set of SEO techniques, or particular
                                 local SEO solutions, we possess the knowledge that will make your business flourish.</p>
