--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
                                                     and Africa , ranging from startups to Fortune 70 companies .</p>
                                             </div>
                                             <div class="herobanner__button">
-                                                <a class="default__button" href="contact">Get In Tech</a>
+                                                <a class="default__button" href="contact">GET IN TECH</a>
                                             </div>
                                         </div>
                                     </div>
@@ -444,7 +444,7 @@
                                                     from startups to Fortune 70 companies .</p>
                                             </div>
                                             <div class="herobanner__button">
-                                                <a class="default__button" href="contact">Get In Tech</a>
+                                                <a class="default__button" href="contact">GET IN TECH</a>
                                             </div>
                                         </div>
                                     </div>
@@ -473,7 +473,7 @@
                                                 </p>
                                             </div>
                                             <div class="herobanner__button">
-                                                <a class="default__button" href="contact">Get In Tech</a>
+                                                <a class="default__button" href="contact">GET IN TECH</a>
                                             </div>
                                         </div>
                                     </div>
