--- a/web-development-services.html
+++ b/web-development-services.html
@@ -346,7 +346,7 @@
                                     <h2 class="heading">Web Development Services</h2>
                                 </div>
                                 <div class="herobanner__text">
-                                    <p style="max-width: 950px;"> Digital Minds On, a leading web development company,
+                                    <p> Digital Minds On, a leading web development company,
                                         to
                                         create high-performance websites. We specialize in custom UI/UX design, complex
                                         animations, and optimization for enhanced user experience, search, and
