video banner height adjust

--- a/services.html
+++ b/services.html
@@ -357,12 +357,7 @@
                                 <h2 class="heading">Digital Minds ON Service Provider </h2>
                             </div>
                             <div class="herobanner__text">
-                                <p style="max-width: 100%;">At Digital Minds On, we build CMS websites that deliver on
-                                    their promises, design online stores that rival Rodeo Drive, and develop web apps
-                                    that redefine what's possible. We take pride in empowering clients with the tools
-                                    and training to maintain their vision long after launch. Thriving on challenges, we
-                                    push boundaries and exceed expectations, offering unmatched expertise and a
-                                    commitment to exceptional, results-driven solutions.</p>
+                                <p>Digital Minds On creates CMS websites that deliver, online stores that shine, and web apps that break boundaries. We empower clients with tools and training to sustain their vision post-launch, pushing limits to provide unmatched expertise and exceptional, results-focused solutions every time.</p>
                             </div>
                             <div class="banner-button">
                                 <ul class="common-button">
