--- a/index.html
+++ b/index.html
@@ -135,6 +135,15 @@
         src="https://www.facebook.com/tr?id=1650844349177903&ev=PageView&noscript=1"
         /></noscript>
         <!-- End Meta Pixel Code -->
+         <!-- Google tag (gtag.js) -->
+            <script async src="https://www.googletagmanager.com/gtag/js?id=G-MNB5PPLTK3"></script>
+            <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+
+            gtag('config', 'G-MNB5PPLTK3');
+            </script>
 
 </head>
 
