title home page hide scroll

--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
         }
     </style>
      <!-- title scrollbar -->
-     <script>
-        // Text for the title
+     <!-- <script>
+     
         let titleText = "Digital Minds On | Web & App Development | E-commerce | Graphic Design ";
         let index = 0;
         function scrollTitle() {
@@ -82,7 +82,7 @@
             index = (index + 1) % titleText.length;
         }
         setInterval(scrollTitle, 200); 
-    </script>
+    </script> -->
     <!-- title scrollbar -->
     <script>
         if (
