--- a/blog.html
+++ b/blog.html
@@ -651,7 +651,7 @@
                                         <p class="bg__white"><span class="text__gradient">05 May, 2024</span></p>
                                     </div>
                                     <div class="blog__4__heading">
-                                        <h6><a href="software-development">What Is Software Development? A Comprehensive Guide</a></h6>
+                                        <h6><a href="what-is-software-development-a-comprehensive-guide">What Is Software Development? A Comprehensive Guide</a></h6>
                                     </div>
                                     <div class="blog__4__text">
                                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
@@ -659,7 +659,7 @@
                                             incididunt.</p>
                                     </div>
                                     <div class="blog__4__button">
-                                        <a class="default__button" href="software-development">READ MORE</a>
+                                        <a class="default__button" href="what-is-software-development-a-comprehensive-guide">READ MORE</a>
                                     </div>
                                 </div>
                             </div>
