--- a/what-is-software-development-a-comprehensive-guide.html
+++ b/what-is-software-development-a-comprehensive-guide.html
@@ -677,7 +677,7 @@
                                 <p> After deployment, the work doesn’t end. Software needs to be updated regularly
                                     ranging from new features added, to faster performance and fixing security
                                     vulnerabilities. By keeping track of the latest trends, Minds On makes sure that
-                                    software is always up to date and still meets the ever-changing user needs.p>
+                                    software is always up to date and still meets the ever-changing user needs.</p>
                             </div>
 
 
@@ -690,7 +690,7 @@
                     <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
                         <div class="blog__details__text" data-aos="fade-up" data-aos-duration="1500">
                             <h2>The Role of Minds On in Software Development
-                                h2>
+                            </h2>
                         </div>
 
                         <div class="blog__details__heading" data-aos="fade-up" data-aos-duration="1500">
@@ -708,7 +708,6 @@
                             <h2>Why Software Development Matters?</h2>
                             <p>Writing code is easy; software development is much more than that: solving problems and
                                 creating value. Software is the lifeblood of business.</p>
-
                             <p>For instance, e-commerce companies have software that allows them to keep their online
                                 stores run, make payment, and always keep track of their inventory. Software helps
                                 patients receive better care from healthcare providers, as well as helps them maintain
