href link update

--- a/what-is-mobile-application-development.html
+++ b/what-is-mobile-application-development.html
@@ -582,7 +582,7 @@
                                 <h2>What is Mobile App Development?</h2>
                             </div>
                             <div class="blog__details__text" data-aos="fade-up" data-aos-duration="1500">
-                                <p><b><a href="#">Mobile application development</a></b> is the process of designing,
+                                <p><b><a href="mobile-app-development-services">Mobile application development</a></b> is the process of designing,
                                     developing and
                                     programming software applications that can operate on tablet or smartphone devices.
                                     It mixes programming, graphical and interface design to create not only fully
