--- a/index.html
+++ b/index.html
@@ -1462,13 +1462,13 @@
                             </div>
                         </div>
                         <div class="blog__content">
-                            <h6><a href="what-is-mobile-application-development">What is Mobile App Development</a>
+                            <h6><a href="what-is-mobile-application-development" target="_blank">What is Mobile App Development</a>
                             </h6>
                             <p>Mobile application development is the process of designing, developing and programming
                                 software applications that can operate on tablet or smartphone devices.</p>
                         </div>
                         <div class="blog__icon">
-                            <a class="direction__btn" href="what-is-mobile-application-development"><svg width="34"
+                            <a class="direction__btn" href="what-is-mobile-application-development" target="_blank"><svg width="34"
                                     height="34" viewBox="0 0 34 34" fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <path d="M14.4258 10.9897L23.0101 10.9897L23.0101 19.574" stroke="#0A0624"
                                         stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round"
@@ -1491,13 +1491,13 @@
                             </div>
                         </div>
                         <div class="blog__content">
-                            <h6><a href="what-is-software-development">Whats is Software Development</a></h6>
+                            <h6><a href="what-is-software-development" target="_blank">Whats is Software Development</a></h6>
                             <p>Software development is the process of designing, creating, testing, and maintaining
                                 software applications, encompassing the entire lifecycle from understanding user needs
                                 to planning, coding, testing, and deploying a functional software solution</p>
                         </div>
                         <div class="blog__icon">
-                            <a class="direction__btn" href="what-is-software-development"><svg width="34" height="34"
+                            <a class="direction__btn" href="what-is-software-development" target="_blank"><svg width="34" height="34"
                                     viewBox="0 0 34 34" fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <path d="M14.4258 10.9897L23.0101 10.9897L23.0101 19.574" stroke="#0A0624"
                                         stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round"
@@ -1520,13 +1520,13 @@
                             </div>
                         </div>
                         <div class="blog__content">
-                            <h6><a href="what-is-web-development">What is Web Development</a></h6>
+                            <h6><a href="what-is-web-development" target="_blank">What is Web Development</a></h6>
                             <p>Web development is the process of creating, maintaining, and building websites. It
                                 involves coding, programming, and other technical elements, as well as creative aspects
                                 like user experience design</p>
                         </div>
                         <div class="blog__icon">
-                            <a class="direction__btn" href="what-is-web-development"><svg width="34" height="34"
+                            <a class="direction__btn" href="what-is-web-development" target="_blank"><svg width="34" height="34"
                                     viewBox="0 0 34 34" fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <path d="M14.4258 10.9897L23.0101 10.9897L23.0101 19.574" stroke="#0A0624"
                                         stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round"
