--- a/blog.html
+++ b/blog.html
@@ -574,6 +574,7 @@
                                     </div>
                                 </div>
                             </div>
+                            
                             <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12" data-aos="fade-up"
                                 data-aos-duration="1700">
                                 <div class="blog__4__single blog__3__single single__transform bg__pink">
@@ -618,6 +619,7 @@
                                     </div>
                                 </div>
                             </div>
+
                             <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12" data-aos="fade-up"
                                 data-aos-duration="2100">
                                 <div class="blog__4__single blog__3__single single__transform bg__pink">
@@ -651,7 +653,7 @@
                                         <p class="bg__white"><span class="text__gradient">05 May, 2024</span></p>
                                     </div>
                                     <div class="blog__4__heading">
-                                        <h6><a href="what-is-software-development-a-comprehensive-guide">What Is Software Development? A Comprehensive Guide</a></h6>
+                                        <h6><a href="what-is-software-development-a-comprehensive-guide" target="_blank">What Is Software Development? A Comprehensive Guide</a></h6>
                                     </div>
                                     <div class="blog__4__text">
                                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
@@ -659,10 +661,11 @@
                                             incididunt.</p>
                                     </div>
                                     <div class="blog__4__button">
-                                        <a class="default__button" href="what-is-software-development-a-comprehensive-guide">READ MORE</a>
+                                        <a class="default__button" href="what-is-software-development-a-comprehensive-guide"  target="_blank">READ MORE</a>
                                     </div>
                                 </div>
                             </div>
+
                             <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12" data-aos="fade-up"
                                 data-aos-duration="2500">
                                 <div class="blog__4__single blog__3__single single__transform bg__pink">
@@ -673,7 +676,7 @@
                                         <p class="bg__white"><span class="text__gradient">20 May, 2024</span></p>
                                     </div>
                                     <div class="blog__4__heading">
-                                        <h6><a href="What-is-application-development-a-detailed-guide-to-2025">What is Application Development? A Detailed Guide to 2025</a></h6>
+                                        <h6><a href="What-is-application-development-a-detailed-guide-to-2025" target="_blank">What is Application Development? A Detailed Guide to 2025</a></h6>
                                     </div>
                                     <div class="blog__4__text">
                                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
@@ -681,7 +684,7 @@
                                             incididunt.</p>
                                     </div>
                                     <div class="blog__4__button">
-                                        <a class="default__button" href="What-is-application-development-a-detailed-guide-to-2025">READ MORE</a>
+                                        <a class="default__button" href="What-is-application-development-a-detailed-guide-to-2025" target="_blank">READ MORE</a>
                                     </div>
                                 </div>
                             </div>
@@ -696,7 +699,7 @@
                                     <p class="bg__white"><span class="text__gradient">20 May, 2024</span></p>
                                 </div>
                                 <div class="blog__4__heading">
-                                    <h6><a href="digital-marketing-and-advertising-company">Why Businesses Need a Digital Marketing Partner</a></h6>
+                                    <h6><a href="digital-marketing-and-advertising-company" target="_blank">Why Businesses Need a Digital Marketing Partner</a></h6>
                                 </div>
                                 <div class="blog__4__text">
                                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
@@ -704,7 +707,7 @@
                                         incididunt.</p>
                                 </div>
                                 <div class="blog__4__button">
-                                    <a class="default__button" href="digital-marketing-and-advertising-company">READ MORE</a>
+                                    <a class="default__button" href="digital-marketing-and-advertising-company" target="_blank">READ MORE</a>
                                 </div>
                             </div>
                         </div>
