--- a/blog.html
+++ b/blog.html
@@ -557,7 +557,7 @@
                                 data-aos-duration="1500">
                                 <div class="blog__4__single blog__3__single single__transform bg__pink">
                                     <div class="blog__4__img">
-                                        <img src="assets/img/blog/app-blog.webp" alt="image">
+                                        <img src="assets/img/blog/app-blog.webp" alt="mobile_app_development">
                                     </div>
                                     <div class="blog__4__time">
                                         <p class="bg__white"><span class="text__gradient">08 May, 2024</span></p>
@@ -583,7 +583,7 @@
                                 data-aos-duration="1700">
                                 <div class="blog__4__single blog__3__single single__transform bg__pink">
                                     <div class="blog__4__img">
-                                        <img src="assets/img/blog/Software.webp" alt="image">
+                                        <img src="assets/img/blog/Software.webp" alt="software_development">
                                     </div>
                                     <div class="blog__4__time">
                                         <p class="bg__white"><span class="text__gradient">10 May, 2024</span></p>
@@ -608,7 +608,7 @@
                                 data-aos-duration="1900">
                                 <div class="blog__4__single blog__3__single single__transform bg__pink">
                                     <div class="blog__4__img">
-                                        <img src="assets/img/blog/Web-blog.webp" alt="image">
+                                        <img src="assets/img/blog/Web-blog.webp" alt="web_development">
                                     </div>
                                     <div class="blog__4__time">
                                         <p class="bg__white"><span class="text__gradient">11 May, 2024</span></p>
@@ -632,7 +632,7 @@
                                 data-aos-duration="2100">
                                 <div class="blog__4__single blog__3__single single__transform bg__pink">
                                     <div class="blog__4__img">
-                                        <img src="assets/img/blog/wordpress_mobile.webp" alt="img">
+                                        <img src="assets/img/blog/wordpress_mobile.webp" alt="wordpress_development">
                                     </div>
                                     <div class="blog__4__time">
                                         <p class="bg__white"><span class="text__gradient">15 May, 2024</span></p>
@@ -656,7 +656,7 @@
                                 data-aos-duration="2300">
                                 <div class="blog__4__single blog__3__single single__transform bg__pink">
                                     <div class="blog__4__img">
-                                        <img src="assets/img/blog/software-mobile.webp" alt="img">
+                                        <img src="assets/img/blog/software-mobile.webp" alt="software_development">
                                     </div>
                                     <div class="blog__4__time">
                                         <p class="bg__white"><span class="text__gradient">05 May, 2024</span></p>
@@ -667,9 +667,8 @@
                                         </h6>
                                     </div>
                                     <div class="blog__4__text">
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                                            tempor
-                                            incididunt.</p>
+                                        <p>Software development involves designing, creating, testing, and maintaining
+                                            software systems.</p>
                                     </div>
                                     <div class="blog__4__button">
                                         <a class="default__button"
@@ -683,7 +682,7 @@
                                 data-aos-duration="2500">
                                 <div class="blog__4__single blog__3__single single__transform bg__pink">
                                     <div class="blog__4__img">
-                                        <img src="assets/img/blog/Title.webp" alt="img">
+                                        <img src="assets/img/blog/Title.webp" alt="application_development">
                                     </div>
                                     <div class="blog__4__time">
                                         <p class="bg__white"><span class="text__gradient">20 May, 2024</span></p>
@@ -694,9 +693,9 @@
                                                 2025</a></h6>
                                     </div>
                                     <div class="blog__4__text">
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                                            tempor
-                                            incididunt.</p>
+                                        <p>
+                                            Organizations rely on app development companies for specific solution needs.
+                                        </p>
                                     </div>
                                     <div class="blog__4__button">
                                         <a class="default__button"
@@ -710,7 +709,7 @@
                                 data-aos-duration="2500">
                                 <div class="blog__4__single blog__3__single single__transform bg__pink">
                                     <div class="blog__4__img">
-                                        <img src="assets/img/blog/Web-blog.webp" alt="img">
+                                        <img src="assets/img/blog/digital-marketing-mobile.webp" alt="Digital_Marketing">
                                     </div>
                                     <div class="blog__4__time">
                                         <p class="bg__white"><span class="text__gradient">20 May, 2024</span></p>
@@ -720,9 +719,8 @@
                                                 Businesses Need a Digital Marketing Partner</a></h6>
                                     </div>
                                     <div class="blog__4__text">
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                                            tempor
-                                            incididunt.</p>
+                                        <p>Starting a business requires market visibility, interaction, credibility, and
+                                            product/service.</p>
                                     </div>
                                     <div class="blog__4__button">
                                         <a class="default__button" href="digital-marketing-and-advertising-company"
