--- a/digital-marketing-and-advertising-company.html
+++ b/digital-marketing-and-advertising-company.html
@@ -338,7 +338,7 @@
                     <div class="col-xl-12" data-aos="fade-up" data-aos-duration="1500">
                         <div class="breadcrumbarea__content__wraper">
                             <div class="breadcrumbarea__title">
-                                <h2 class="heading">What is Application Development? A Detailed Guide to 2025</h2>
+                                <h2 class="heading">What is Digital Marketing and Advertising Company</h2>
                             </div>
                             <div class="breadcrumbarea__inner">
                                 <ul>
@@ -574,7 +574,7 @@
 
                             <div class="blog__details__img__wrapper" data-aos="fade-up" data-aos-duration="1500">
                                 <div class="blog__details__img">
-                                    <img src="assets/img/blog/Web-blog.webp" alt="img">
+                                    <img src="assets/img/blog/digital-marketing-desktop.webp" alt="img">
                                 </div>
                                 <div class="blog__details__small__button">
                                     <span>08 May, 2024</span>
