--- a/blog.html
+++ b/blog.html
@@ -709,7 +709,8 @@
                                 data-aos-duration="2500">
                                 <div class="blog__4__single blog__3__single single__transform bg__pink">
                                     <div class="blog__4__img">
-                                        <img src="assets/img/blog/digital-marketing-mobile.webp" alt="Digital_Marketing">
+                                        <img src="assets/img/blog/digital-marketing-mobile.webp"
+                                            alt="Digital_Marketing">
                                     </div>
                                     <div class="blog__4__time">
                                         <p class="bg__white"><span class="text__gradient">26 May, 2024</span></p>
