usa blog update

--- a/blog.html
+++ b/blog.html
@@ -729,8 +729,30 @@
                                     </div>
                                 </div>
                             </div>
+                            <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12" data-aos="fade-up"
+                                data-aos-duration="2500">
+                                <div class="blog__4__single blog__3__single single__transform bg__pink">
+                                    <div class="blog__4__img">
+                                        <img src="assets/img/blog/digital-marketing-mobile.webp"
+                                            alt="Digital_Marketing">
+                                    </div>
+                                    <div class="blog__4__time">
+                                        <p class="bg__white"><span class="text__gradient">13 January, 2025</span></p>
+                                    </div>
+                                    <div class="blog__4__heading">
+                                        <h6><a href="web-development-company-in-usa" target="_blank">Web Development Company In USA</a></h6>
+                                    </div>
+                                    <div class="blog__4__text">
+                                        <p>Your business needs a unique USA web development company for success.</p>
+                                    </div>
+                                    <div class="blog__4__button">
+                                        <a class="default__button" href="web-development-company-in-usa"
+                                            target="_blank">READ MORE</a>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
-                        <div class="pagination" data-aos="fade-up" data-aos-duration="1500">
+                        <!-- <div class="pagination" data-aos="fade-up" data-aos-duration="1500">
                             <ul>
                                 <li><a class="common__gradient__bg active" href="javascript:void(0)"><span>1</span></a>
                                 </li>
@@ -739,7 +761,7 @@
                                 <li><a class="common__gradient__bg" href="javascript:void(0)"><span><i
                                                 class="icofont-simple-right"></i></span></a></li>
                             </ul>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </div>
