--- a/blog.html
+++ b/blog.html
@@ -740,13 +740,13 @@
                                         <p class="bg__white"><span class="text__gradient">13 January, 2025</span></p>
                                     </div>
                                     <div class="blog__4__heading">
-                                        <h6><a href="web-development-company-in-usa" target="_blank">Web Development Company In USA</a></h6>
+                                        <h6><a href="Professional-Web-Development-Company" target="_blank">Expert Web Development Company in USA</a></h6>
                                     </div>
                                     <div class="blog__4__text">
                                         <p>Your business needs a unique USA web development company for success.</p>
                                     </div>
                                     <div class="blog__4__button">
-                                        <a class="default__button" href="web-development-company-in-usa"
+                                        <a class="default__button" href="Professional-Web-Development-Company"
                                             target="_blank">READ MORE</a>
                                     </div>
                                 </div>
