--- a/Professional-Web-Development-Company.html
+++ b/Professional-Web-Development-Company.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Web Development and Web Design Explained | Digital Minds On </title>
+    <title>Professional Web Development Company | Digital Minds On </title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -338,7 +338,7 @@
                     <div class="col-xl-12" data-aos="fade-up" data-aos-duration="1500">
                         <div class="breadcrumbarea__content__wraper">
                             <div class="breadcrumbarea__title">
-                                <h2 class="heading">Web Development Company In USA</h2>
+                                <h2 class="heading">Expert Web Development Company in USA</h2>
                             </div>
                             <div class="breadcrumbarea__inner">
                                 <ul>
