--- a/what-is-software-development-a-comprehensive-guide.html
+++ b/what-is-software-development-a-comprehensive-guide.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Web Development and Web Design Explained | Digital Minds On </title>
+    <title>Software Development a Comprehensive Guide | Digital Minds On </title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -22,7 +22,7 @@
     <!-- title scrollbar -->
     <script>
         // Text for the title
-        let titleText = "Web Development and Web Design Explained | Digital Minds On ";
+        let titleText = "Software Development a Comprehensive Guide | Digital Minds On ";
         let index = 0;
         function scrollTitle() {
             document.title = titleText.slice(index) + titleText.slice(0, index);
