--- a/Professional-Web-Development-Company.html
+++ b/Professional-Web-Development-Company.html
@@ -22,7 +22,7 @@
     <!-- title scrollbar -->
     <script>
         // Text for the title
-        let titleText = "Web Development and Web Design Explained | Digital Minds On ";
+        let titleText = "Professional Web Development Company | Digital Minds On ";
         let index = 0;
         function scrollTitle() {
             document.title = titleText.slice(index) + titleText.slice(0, index);
